# reactors-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  rust.yml
benches/: echo.rs  file_rw_benchmark.rs  tcp_rw_benchmark.rs
src/: file.rs  file_unix.rs  lib.rs  reactor.rs  socket.rs  socket_unix.rs  timewheel.rs
src/fs/: file.rs  mod.rs  reactor.rs  reactor_unix.rs  reactor_windows.rs
src/io/: file.rs  file_posix.rs  mod.rs  poller.rs  socket.rs  socket_posix.rs  socket_win32.rs
src/io/file/: extend.rs  file.rs  file_posix.rs  file_unix.rs  file_win32.rs  opcode.rs
src/io/poller/: epoll.rs  iocp.rs  kqueue.rs  poller_iocp.rs  poller_kqueue.rs  poller_win32.rs  sys.rs
src/io/poller/sys/: poller_win32.rs
src/io/socket/: extend.rs  handle_win32.rs  socket_posix.rs  socket_unix.rs  socket_win32.rs  tcp.rs  udp.rs
src/io/socket/extend/: tcp.rs  udp.rs
src/net/: mod.rs  reactor.rs  reactor_unix.rs  reactor_windows.rs  socket.rs
src/net/socket/: tcp.rs  udp.rs
src/poll_unix/: kqueue.rs  mod.rs
src/poller/: kqueue.rs  mod.rs
tests/: file.rs  tcp.rs  udp.rs
