[package]
name = "reactors"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
keywords = ["futures-rs", "reactor", "async", "file", "socket"]
description = "Performance-focused cross-platform asynchronous IO implementation"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "^0.3" }
log = "^0.4"
errno = "0.3.0"
os_socketaddr = "0.2.4"
once_cell = "^1.17.1"


[target.'cfg(target_family = "unix")'.dependencies]
libc = "^0.2"

[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "^0.3.9", features = ["ioapiset", "mswsock"] }

[dev-dependencies]
pretty_env_logger = "^0.4"
async-std = { version = "1.12.0", features = ["attributes"] }
rand = { version = "0.8.5", features = ["getrandom"] }
hex = "^0.4"
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
futures-test = "^0.3"
